--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@ body {
     overflow-x: hidden;
     font-family: 'Nunito', sans-serif;
     color: white;
-    background: url(../img/neon-pizza-sign.png)center/cover fixed no-repeat;
+    background-color:white; 
 }
 
 /*BISQUE COLOR*/
