--- a/css/styles.css
+++ b/css/styles.css
@@ -202,7 +202,7 @@ body {
 
 .index-form {
     width: 100%;
-    background: url(../img/set.jpeg)center/cover fixed no-repeat;
+    background: url(../img/back.jpeg)center/cover fixed no-repeat;
     padding-top: 60px;
     padding-bottom: 60px;
     scroll-padding-bottom: 60px;
